ingresses.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aws-lb-app-frontend
  name: aws-lb-app-frontend
  namespace: staging
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: aws-lb-app-frontend
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aws-lb-app-backend
  name: aws-lb-app-backend
  namespace: staging
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: aws-lb-app-backend
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aws-lb-app-frontend
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "aws-alb-ip.test.osodevops.io"
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: ip
spec:
  backend:
    serviceName: aws-lb-app-frontend
    servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aws-lb-app-backend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: ip
spec:
  rules:
    - http:
        paths:
          - path: /backend/*
            backend:
              serviceName: aws-lb-app-backend
              servicePort: 80
#---
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: aws-alb-instance-app-frontend
#  annotations:
#    external-dns.alpha.kubernetes.io/hostname: "aws-alb-instance.demo.otterley.org"
#    kubernetes.io/ingress.class: alb
#    alb.ingress.kubernetes.io/target-type: instance
#    alb.ingress.kubernetes.io/scheme: internet-facing
#    alb.ingress.kubernetes.io/group.name: instance
#spec:
#  backend:
#    serviceName: aws-lb-app-frontend
#    servicePort: 80
#---
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: aws-alb-instance-app-backend
#  annotations:
#    kubernetes.io/ingress.class: alb
#    alb.ingress.kubernetes.io/target-type: instance
#    alb.ingress.kubernetes.io/scheme: internet-facing
#    alb.ingress.kubernetes.io/group.name: instance
#spec:
#  rules:
#    - http:
#        paths:
#          - path: /backend/*
#            backend:
#              serviceName: aws-lb-app-backend
#              servicePort: 80
